--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo logo">
         <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="90" height="40" alt="Mishka">
       </a>
       <nav class="main-nav">
@@ -61,19 +61,19 @@
       <section class="catalog">
         <div class="catalog__wrapper">
           <ul class="catalog__catalog-list">
-            <li class="catalog-list__catalog-item">
+            <li class="catalog-list__catalog-item catalog-item">
               <img src="img/product-1.jpg" width="0" height="0" alt="Текст">
               <h3 class="catalog-item__title"><a class="link-underline">Зайчик-попрыгайчик</a></h3>
               <p class="popular-item__description">Рост 30 см, вес 200 г</p>
               <p class="popular-item__price">1 200 руб.</p>
             </li>
-            <li class="catalog-list__catalog-item">
+            <li class="catalog-list__catalog-item catalog-item">
               <img src="img/product-1.jpg" width="0" height="0" alt="Текст">
               <h3 class="catalog-item__title"><a class="link-underline">Корзинка для белья</a></h3>
               <p class="popular-item__description">Диаметр 15 см, высота 10 см</p>
               <p class="popular-item__price">690 руб.</p>
             </li>
-            <li class="catalog-list__catalog-item">
+            <li class="catalog-list__catalog-item catalog-item">
               <img src="img/product-1.jpg" width="0" height="0" alt="Текст">
               <h3 class="catalog-item__title"><a class="link-underline">Большая   корзинка для игрушек</a></h3>
               <p class="popular-item__description">Диаметр 30 см, высота 30 см</p>
@@ -95,7 +95,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo">
+        <a class="page-footer__logo logo">
           <img class="page-footer__logo-image" src="img/logotype-mobile.svg" width="90" height="40" alt="Mishka">
         </a>
         <div class="page-footer__social social">
