--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo logo">
         <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="90" height="40" alt="Mishka">
       </a>
       <nav class="main-nav">
@@ -62,7 +62,7 @@
         <h2 class="visually-hidden">Заказ</h2>
         <form class="form-order" method="get" action="https://echo.htmlacademy.ru">
 
-          <a class="order__button button" href="#">Сделать заказ</a>
+          <button type="submit" class="order__button button">Сделать заказ</button>
         </form>
       </section>
 
@@ -70,7 +70,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo">
+        <a class="page-footer__logo logo">
           <img class="page-footer__logo-image" src="img/logotype-mobile.svg" width="90" height="40" alt="Mishka">
         </a>
         <div class="page-footer__social social">
