--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo logo">
         <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="90" height="40" alt="Mishka">
       </a>
       <nav class="main-nav">
@@ -170,7 +170,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo">
+        <a class="page-footer__logo logo">
           <img class="page-footer__logo-image" src="img/logotype-mobile.svg" width="90" height="40" alt="Mishka">
         </a>
         <div class="page-footer__social social">
