--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,19 +54,19 @@
         <div class="catalog__wrapper">
           <ul class="catalog__list catalog-list">
             <li class="catalog-list__item catalog-item">
-              <img src="img/photo-hare-mobile.jpg" width="260" height="195" alt="Текст">
+              <img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Текст">
               <h3 class="catalog-item__title"><a>Зайчик-попрыгайчик</a></h3>
               <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
               <p class="catalog-item__price">1 200 руб.</p>
             </li>
             <li class="catalog-list__item catalog-item">
-              <img src="img/photo-bowl-mobile.jpg" width="260" height="195" alt="Текст">
+              <img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Текст">
               <h3 class="catalog-item__title"><a>Корзинка для белья</a></h3>
               <p class="catalog-item__description">Диаметр 15 см, высота 10 см</p>
               <p class="catalog-item__price">690 руб.</p>
             </li>
             <li class="catalog-list__item catalog-item">
-              <img src="img/photo-toys-mobile.jpg" width="260" height="195" alt="Текст">
+              <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Текст">
               <h3 class="catalog-item__title"><a>Большая   корзинка для игрушек</a></h3>
               <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
               <p class="catalog-item__price">1 500 руб.</p>
