--- a/source/index.html
+++ b/source/index.html
@@ -97,7 +97,7 @@
               <td class="table__value">15 см</td>
             </tr>
           </table>
-          <img class="popular__image" src="img/triple-set-mobile.jpg" width="260" height="315" alt="Вязанные корзинки">
+          <img class="popular__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки">
           <p class="popular__price">Цена: 990 руб.</p>
           <a class="popular__order button" href="#">Заказать</a>
         </div>
@@ -166,7 +166,7 @@
             </li>
           </ul>
         </div>
-        <img class="contact__map" src="img/map-mobile.jpg" width="320" height="457" alt="Карта">
+        <img class="contact__map" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Карта">
         <a class="contact__write button" href="#">Напишите нам</a>
       </section>
     </main>
