--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
         <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню<span></button>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -24,10 +24,18 @@
           </ul>
           <ul class="main-nav__list user-list">
             <li class="user-list__item">
-              <a class="user-list__search" href="search.html">Поиск</a>
+              <a class="user-list__link user-list__search" href="search.html"><span class="visually-hidden">Поиск</span>
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.6px" height="17.6px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
+                  <path d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
+                </svg>
+              </a>
             </li>
             <li class="user-list__item">
-              <a class="user-list__login" href="login.html">Войти</a>
+              <a class="user-list__link user-list__login" href="login.html"><span class="visually-hidden">Войти</span>
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
+                  <path d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
+                </svg>
+              </a>
             </li>
             <li class="user-list__item">
               <a class="user-list__cart" href="cart.html">Корзина: пока пуста</a>
@@ -41,7 +49,7 @@
               <a href="sale.html">Распродажа</a>
             </li>
           </ul>
-          <p class="main-nav__delivery delivery">Быстрая доставка по России</p>
+          <p class="main-nav__delivery delivery">Бесплатная доставка по России</p>
         </div>
       </nav>
     </header>
@@ -80,32 +88,42 @@
 
       <section class="popular">
         <div class="popular__wrapper">
-          <h2 class="popular__title">Вязаные корзинки</h2>
-          <p class="popular__new">ТОВАР НЕДЕЛИ</p>
-          <p class="popular__text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-          <table class="popular__table table">
-            <tr class="table__item">
-              <td class="table__field">Цвет:</td>
-              <td class="table__value">«Тиффани»/серый</td>
-            </tr>
-            <tr class="table__item">
-              <td class="table__field">Диаметр:</td>
-              <td class="table__value">25 см</td>
-            </tr>
-            <tr class="table__item">
-              <td class="table__field">Высота:</td>
-              <td class="table__value">15 см</td>
-            </tr>
-          </table>
-          <img class="popular__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязанные корзинки">
-          <p class="popular__price">Цена: 990 руб.</p>
-          <a class="popular__order button" href="#">Заказать</a>
+          <div class="popular__wrapper-title">
+            <h2 class="popular__title">Вязаные корзинки</h2>
+            <p class="popular__new">ТОВАР НЕДЕЛИ</p>
+          </div>
+          <div class="popular__wrapper-content">
+            <div class="popular__wrapper-block-table">
+              <p class="popular__text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+              <table class="popular__table table">
+                <tr class="table__item">
+                  <td class="table__field">Цвет:</td>
+                  <td class="table__value">«Тиффани»/серый</td>
+                </tr>
+                <tr class="table__item">
+                  <td class="table__field">Диаметр:</td>
+                  <td class="table__value">25 см</td>
+                </tr>
+                <tr class="table__item">
+                  <td class="table__field">Высота:</td>
+                  <td class="table__value">15 см</td>
+                </tr>
+              </table>
+            </div>
+            <div class="popular__wrapper-block-img">
+              <img class="popular__image" src="img/triple-set-mobile@1x.jpg" width="260"   height="315" alt="Вязанные корзинки">
+            </div>
+            <div class="popular__wrapper-block-price">
+              <p class="popular__price">Цена: 990 руб.</p>
+              <a class="popular__order button" href="#">Заказать</a>
+            </div>
+          </div>
         </div>
       </section>
 
       <section class="info">
         <div class="info__wrapper">
-          <h2 class="info__title">Коротко о нас</h2>
+          <h2 class="info__title">Коротко о нас:</h2>
           <ul class="info__list">
             <li class="info__item info__item--eco">
               <a class="info__link">Экологически<br> чистые материалы</a>
@@ -174,7 +192,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo footer-logo">
-          <img class="footer-logo__logo-image" src="img/logo-footer.svg" width="90" height="40" alt="Mishka">
+          <img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
