--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <title>Mishka</title>
   </head>
@@ -56,7 +57,7 @@
 
     <main class="page-order">
 
-      <h1 class="page-order__page-title page-title">Вязание на заказ</h1>
+      <h1 class="page-order__page-title page-title page-title--color">Вязание на заказ</h1>
 
       <section class="order">
         <h2 class="visually-hidden">Заказ</h2>
