--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <title>Mishka</title>
   </head>
@@ -56,7 +57,7 @@
 
     <main class="page-catalog">
 
-      <h1 class="page-catalog__page-title page-title">Каталог товаров</h1>
+      <h1 class="page-catalog__page-title page-title page-title--color">Каталог товаров</h1>
 
       <section class="catalog">
         <div class="catalog__wrapper">
@@ -64,8 +65,10 @@
             <li class="catalog-list__item catalog-item">
               <img class="catalog-item__img catalog-item__img-hare" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Текст">
               <div class="catalog-item__wrapper-desc">
-                <h3 class="catalog-item__title"><a>Зайчик-попрыгайчик</a></h3>
-                <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
+                <div class="catalog-item__title-wrapper">
+                  <h3 class="catalog-item__title"><a>Зайчик-попрыгайчик</a></h3>
+                  <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
+                </div>
                 <div class="catalog-item__price-wrapper">
                   <p class="catalog-item__price">1 200 руб.</p>
                   <a class="catalog-item__btn-add">
@@ -79,8 +82,10 @@
             <li class="catalog-list__item catalog-item">
               <img class="catalog-item__img catalog-item__img-bowl" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Текст">
               <div class="catalog-item__wrapper-desc">
-                <h3 class="catalog-item__title"><a>Корзинка для белья</a></h3>
-                <p class="catalog-item__description">Диаметр 15 см, высота 10 см</p>
+                <div class="catalog-item__title-wrapper">
+                  <h3 class="catalog-item__title"><a>Корзинка для белья</a></h3>
+                  <p class="catalog-item__description">Диаметр 15 см, высота 10 см</p>
+                </div>
                 <div class="catalog-item__price-wrapper">
                   <p class="catalog-item__price">690 руб.</p>
                   <a class="catalog-item__btn-add">
@@ -94,8 +99,10 @@
             <li class="catalog-list__item catalog-item">
               <img class="catalog-item__img catalog-item__img-toys" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Текст">
               <div class="catalog-item__wrapper-desc">
-                <h3 class="catalog-item__title"><a>Большая корзинка<br>для игрушек</a></h3>
-                <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
+                <div class="catalog-item__title-wrapper">
+                  <h3 class="catalog-item__title"><a>Большая корзинка<br>для игрушек</a></h3>
+                  <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
+                </div>
                 <div class="catalog-item__price-wrapper">
                   <p class="catalog-item__price">1 500 руб.</p>
                   <a class="catalog-item__btn-add">
