доработка по замечаниям

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,10 +63,12 @@
         <div class="catalog__wrapper">
           <ul class="catalog__list catalog-list">
             <li class="catalog-list__item catalog-item">
-              <img class="catalog-item__img catalog-item__img-hare" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Текст">
+              <a href="bunny.html">
+                <img class="catalog-item__img catalog-item__img-hare" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Текст">
+              </a>
               <div class="catalog-item__wrapper-desc">
                 <div class="catalog-item__title-wrapper">
-                  <h3 class="catalog-item__title"><a>Зайчик-попрыгайчик</a></h3>
+                  <h3 class="catalog-item__title"><a href="bunny.html">Зайчик-попрыгайчик</a></h3>
                   <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
                 </div>
                 <div class="catalog-item__price-wrapper">
@@ -80,10 +82,12 @@
               </div>
             </li>
             <li class="catalog-list__item catalog-item">
-              <img class="catalog-item__img catalog-item__img-bowl" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Текст">
+              <a href="basket.html">
+                <img class="catalog-item__img catalog-item__img-bowl" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Текст">
+              </a>
               <div class="catalog-item__wrapper-desc">
                 <div class="catalog-item__title-wrapper">
-                  <h3 class="catalog-item__title"><a>Корзинка для белья</a></h3>
+                  <h3 class="catalog-item__title"><a href="basket.html">Корзинка для белья</a></h3>
                   <p class="catalog-item__description">Диаметр 15 см, высота 10 см</p>
                 </div>
                 <div class="catalog-item__price-wrapper">
@@ -97,10 +101,12 @@
               </div>
             </li>
             <li class="catalog-list__item catalog-item">
-              <img class="catalog-item__img catalog-item__img-toys" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Текст">
+              <a href="big-basket.html">
+                <img class="catalog-item__img catalog-item__img-toys" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Текст">
+              </a>
               <div class="catalog-item__wrapper-desc">
                 <div class="catalog-item__title-wrapper">
-                  <h3 class="catalog-item__title"><a>Большая корзинка<br>для игрушек</a></h3>
+                  <h3 class="catalog-item__title"><a href="big-basket.html">Большая корзинка<br>для игрушек</a></h3>
                   <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
                 </div>
                 <div class="catalog-item__price-wrapper">
