--- a/source/form.html
+++ b/source/form.html
@@ -17,10 +17,10 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="catalog.html">Вязание на заказ</a>
+              <a>Каталог товаров</a>
             </li>
             <li class="site-list__item">
-              <a>Записаться</a>
+              <a href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-list">
