--- a/source/catalog.html
+++ b/source/catalog.html
@@ -64,7 +64,11 @@
           <ul class="catalog__list catalog-list">
             <li class="catalog-list__item catalog-item">
               <a href="bunny.html">
-                <img class="catalog-item__img catalog-item__img-hare" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Текст">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
+                  <img class="catalog-item__img catalog-item__img-hare" src="img/photo-hare-mobile@1x.jpg 1x, img/photo-hare-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
+                </picture>
               </a>
               <div class="catalog-item__wrapper-desc">
                 <div class="catalog-item__title-wrapper">
@@ -83,7 +87,11 @@
             </li>
             <li class="catalog-list__item catalog-item">
               <a href="basket.html">
-                <img class="catalog-item__img catalog-item__img-bowl" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Текст">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+                  <img class="catalog-item__img catalog-item__img-bowl" src="img/photo-bowl-mobile@1x.jpg 1x, img/photo-bowl-mobile@2x.jpg 2x"alt="Корзинка для белья">
+                </picture>
               </a>
               <div class="catalog-item__wrapper-desc">
                 <div class="catalog-item__title-wrapper">
@@ -102,7 +110,11 @@
             </li>
             <li class="catalog-list__item catalog-item">
               <a href="big-basket.html">
-                <img class="catalog-item__img catalog-item__img-toys" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Текст">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
+                  <img class="catalog-item__img catalog-item__img-toys" src="img/photo-toys-mobile@1x.jpg 1x, img/photo-toys-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
+                </picture>
               </a>
               <div class="catalog-item__wrapper-desc">
                 <div class="catalog-item__title-wrapper">
@@ -127,7 +139,11 @@
         <div class="video__wrapper">
           <h2 class="video__title">Процесс производства</h2>
           <div class="video__production">
-            <img class="video__img" width="260" height="150" src="img/video-mobile@1x.jpg" alt="Процесс производства">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+              <img class="video__img" src="img/video-mobile@1x.jpg 1x, img/video-mobile@2x.jpg 2x" alt="Процесс производства">
+            </picture>
             <a class="video__play"></a>
           </div>
           <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
