--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,11 @@
 
     <header class="page-header">
       <a class="page-header__logo header-logo" href="index.html">
-        <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="90" height="40" alt="Mishka">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+        </picture>
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -67,7 +71,7 @@
                 <picture>
                   <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
-                  <img class="catalog-item__img catalog-item__img-hare" src="img/photo-hare-mobile@1x.jpg 1x, img/photo-hare-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
+                  <img class="catalog-item__img catalog-item__img-hare" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
                 </picture>
               </a>
               <div class="catalog-item__wrapper-desc">
@@ -90,7 +94,7 @@
                 <picture>
                   <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
-                  <img class="catalog-item__img catalog-item__img-bowl" src="img/photo-bowl-mobile@1x.jpg 1x, img/photo-bowl-mobile@2x.jpg 2x"alt="Корзинка для белья">
+                  <img class="catalog-item__img catalog-item__img-bowl" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x"alt="Корзинка для белья">
                 </picture>
               </a>
               <div class="catalog-item__wrapper-desc">
@@ -113,7 +117,7 @@
                 <picture>
                   <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
-                  <img class="catalog-item__img catalog-item__img-toys" src="img/photo-toys-mobile@1x.jpg 1x, img/photo-toys-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
+                  <img class="catalog-item__img catalog-item__img-toys" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
                 </picture>
               </a>
               <div class="catalog-item__wrapper-desc">
@@ -142,7 +146,7 @@
             <picture>
               <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
-              <img class="video__img" src="img/video-mobile@1x.jpg 1x, img/video-mobile@2x.jpg 2x" alt="Процесс производства">
+              <img class="video__img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства">
             </picture>
             <a class="video__play"></a>
           </div>
@@ -246,6 +250,7 @@
     }
   });
 </script>
+<script src="js/picturefill.min.js"></script>
 
   </body>
 </html>
