--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,11 @@
 
     <header class="page-header">
       <a class="page-header__logo header-logo" href="index.html">
-        <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="90" height="40" alt="Mishka">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+        </picture>
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -238,6 +242,7 @@
     }
   });
 </script>
+<script src="js/picturefill.min.js"></script>
 
   </body>
 </html>
