--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
     <link href="css/style.min.css" rel="stylesheet">
     <title>Mishka</title>
   </head>
@@ -85,7 +87,7 @@
                 </div>
                 <div class="catalog-item__price-wrapper">
                   <p class="catalog-item__price">1 200 руб.</p>
-                  <a class="catalog-item__btn-add">
+                  <a class="catalog-item__btn-add button--feedback">
                     <svg width="20.294px" height="18.849px"><use xlink:href="#svg-icon-cart"></use></svg>
                   </a>
                 </div>
@@ -110,7 +112,7 @@
                 </div>
                 <div class="catalog-item__price-wrapper">
                   <p class="catalog-item__price">690 руб.</p>
-                  <a class="catalog-item__btn-add">
+                  <a class="catalog-item__btn-add button--feedback">
                     <svg width="20.294px" height="18.849px"><use xlink:href="#svg-icon-cart"></use></svg>
                   </a>
                 </div>
@@ -135,7 +137,7 @@
                 </div>
                 <div class="catalog-item__price-wrapper">
                   <p class="catalog-item__price">1 500 руб.</p>
-                  <a class="catalog-item__btn-add">
+                  <a class="catalog-item__btn-add button--feedback">
                     <svg width="20.294px" height="18.849px"><use xlink:href="#svg-icon-cart"></use></svg>
                   </a>
                 </div>
@@ -169,8 +171,9 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo footer-logo">
-          <img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">
+        <a class="page-footer__logo footer-logo" href="index.html">
+          <!--<img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">-->
+          <svg class="footer-logo__logo-image" width="101.615px" height="34.056px"><use xlink:href="#svg-icon-logo-footer"></use></svg>
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
@@ -193,20 +196,20 @@
         </div>
         <div class="page-footer__copyright copyright">
           <b class="copyright__text">Разработано</b>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span>
             <svg width="26.943px" height="34.09px"><use xlink:href="#svg-icon-htmlacademy"></use></svg>
           </a>
         </div>
       </div>
     </footer>
 
-    <div class="modal">
+    <div class="modal modal--write-us">
       <div class="modal__wrapper">
         <h2 class="modal__title">Добавить в корзину</h2>
         <p class="modal__text">Выберите размер:</p>
         <form class="modal__form" action="https://echo.htmlacademy.ru" method="post">
           <ul class="modal__list">
-            <li class="modal__item">
+            <li class="modal__item modal__item--active">
               <input class="modal__input visually-hidden" type="radio" name="size" value="size_S" id="size_S">
               <label class="modal__label" for="size_S">S</label>
             </li>
@@ -223,6 +226,8 @@
         </form>
       </div>
     </div>
+
+    <div class="overlay"></div>
 
 <script src="js/script.min.js"></script>
 <script src="js/picturefill.min.js"></script>
