--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
     <link href="css/style.min.css" rel="stylesheet">
     <title>Mishka</title>
   </head>
@@ -25,10 +27,10 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a>Каталог товаров</a>
+              <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Вязание на заказ</a>
+              <a>Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-list">
@@ -63,14 +65,14 @@
 
       <h1 class="page-order__page-title page-title page-title--color">Вязание на заказ</h1>
 
-      <section class="order">
-        <h2 class="visually-hidden">Заказ</h2>
+      <!--<section class="order">
+        <h2 class="visually-hidden">Заказ</h2>-->
 
         <form class="form-order" method="get" action="https://echo.htmlacademy.ru">
           <p class="form-order__desc">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
 
-          <fieldset class="form-order__fieldset type">
-          <legend class="form-order__legend type__title">Тип</legend>
+          <div class="form-order__fieldset type">
+            <h2 class="form-order__legend type__title">Тип</h2>
             <ul class="type__list">
               <li class="type__item">
                 <input class="type__input-radio visually-hidden" type="radio" name="type" value="accessory" id="accessory" checked>
@@ -81,10 +83,10 @@
                 <label class="form-order__label type__input-label" for="toy">Детская игрушка</label>
               </li>
             </ul>
-          </fieldset>
+          </div>
 
-          <fieldset class="form-order__fieldset color">
-          <legend class="form-order__legend color__title">Цвет</legend>
+          <div class="form-order__fieldset color">
+            <h2 class="form-order__legend color__title">Цвет</h2>
             <ul class="color__list">
               <li class="color__item">
                 <input class="color__input-checkbox visually-hidden" type="checkbox" id="white" name="white" checked>
@@ -111,10 +113,10 @@
                 <label class="form-order__label color__input-label" for="orange">Оранжевый</label>
               </li>
             </ul>
-          </fieldset>
+          </div>
 
-          <fieldset class="form-order__fieldset personal">
-          <legend class="form-order__legend personal__title">ФИО</legend>
+          <div class="form-order__fieldset personal">
+            <h2 class="form-order__legend personal__title">ФИО</h2>
             <ul class="personal__list">
               <li class="personal__item">
                 <label class="form-order__label personal__input-label" for="name">Имя:</label>
@@ -129,41 +131,46 @@
                 <input class="personal__input" type="text" id="middle_name" placeholder="Отчество, если желаете">
               </li>
             </ul>
-          </fieldset>
+          </div>
 
-          <fieldset class="form-order__fieldset phone">
-          <legend class="form-order__legend phone__title">Тел</legend>
-            <input class="phone__input" type="phone" id="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
-            <label class="phone__label" for="phone">
-              <svg width="24.829px" height="24.333px"><use xlink:href="#svg-icon-phone"></use></svg>
-            </label>
-          </fieldset>
+          <div class="form-order__wrapper-phone">
+            <div class="form-order__fieldset phone">
+              <h2 class="form-order__legend phone__title">Тел</h2>
+              <input class="phone__input" type="phone" id="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+              <label class="phone__label" for="phone">
+                <svg width="24.829px" height="24.333px"><use xlink:href="#svg-icon-phone"></use></svg>
+              </label>
+            </div>
 
-          <fieldset class="form-order__fieldset email">
-          <legend class="form-order__legend email__title">E-mail</legend>
-            <input class="email__input" type="email" id="email" placeholder="Ваш Email*">
-            <label class="email__label" for="email">
-              <svg width="32px" height="32px"><use xlink:href="#svg-icon-mail"></use></svg>
-            </label>
-          </fieldset>
+            <div class="form-order__fieldset email">
+              <h2 class="form-order__legend email__title">E-mail</h2>
+              <input class="email__input" type="email" id="email" placeholder="Ваш Email*">
+              <label class="email__label" for="email">
+                <svg width="32px" height="32px"><use xlink:href="#svg-icon-mail"></use></svg>
+              </label>
+            </div>
+          </div>
 
-          <fieldset class="form-order__fieldset textarea">
-          <legend class="form-order__legend textarea__title">Доп</legend>
+          <div class="form-order__fieldset textarea">
+          <h2 class="form-order__legend textarea__title">Доп</h2>
             <textarea class="textarea__field" cols="1" rows="1" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-          </fieldset>
+          </div>
 
-          <p class="form-order__text">*Поля обязательны для заполнения</p>
+          <div class="form-order-wrapper-btn">
+            <p class="form-order__text">*Поля обязательны для заполнения</p>
 
-          <button type="submit" class="form-order__btn button button-submit">Сделать заказ</button>
+            <button type="submit" class="form-order__btn button button-submit">Отправить заказ</button>
+          </div>
         </form>
-      </section>
+      <!--</section>-->
 
     </main>
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo footer-logo">
-          <img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">
+        <a class="page-footer__logo footer-logo" href="index.html">
+          <!--<img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">-->
+          <svg class="footer-logo__logo-image" width="101.615px" height="34.056px"><use xlink:href="#svg-icon-logo-footer"></use></svg>
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
@@ -186,7 +193,7 @@
         </div>
         <div class="page-footer__copyright copyright">
           <b class="copyright__text">Разработано</b>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span>
             <svg width="26.943px" height="34.09px"><use xlink:href="#svg-icon-htmlacademy"></use></svg>
           </a>
         </div>
