--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
 
     <header class="page-header container">
       <nav class="main-nav main-nav--closed main-nav--nojs">
-        <a class="page-header__logo header-logo">
+        <a class="page-header__logo header-logo" href="index.html">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -228,7 +228,8 @@
 
     <div class="overlay"></div>
 
-<script src="js/script.min.js"></script>
+<script src="js/menu.min.js"></script>
+<script src="js/modal.min.js"></script>
 <script src="js/picturefill.min.js"></script>
 
   </body>
