--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
     </svg>
 
     <header class="page-header container">
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--closed main-nav--nojs" href="index.html">
         <a class="page-header__logo header-logo">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -207,7 +207,7 @@
       </div>
     </footer>
 
-<script src="js/script.min.js"></script>
+<script src="js/menu.min.js"></script>
 <script src="js/picturefill.min.js"></script>
 
   </body>
