--- a/source/index.html
+++ b/source/index.html
@@ -16,15 +16,17 @@
 
     <header class="page-header container">
       <nav class="main-nav main-nav--closed main-nav--nojs">
-        <a class="page-header__logo header-logo">
-          <picture>
-            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
-          </picture>
-        </a>
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
+        <div class="main-nav__header">
+          <a class="page-header__logo header-logo">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+            </picture>
+          </a>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        </div>
+        <!--<div class="main-nav__wrapper">-->
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a href="catalog.html">Каталог товаров</a>
@@ -57,7 +59,7 @@
             </li>
           </ul>
           <p class="main-nav__delivery">Бесплатная доставка по России</p>
-        </div>
+        <!--</div>-->
       </nav>
     </header>
 
@@ -262,7 +264,8 @@
 
     <div class="overlay"></div>
 
-<script src="js/script.min.js"></script>
+<script src="js/menu.min.js"></script>
+<script src="js/modal.min.js"></script>
 <script src="js/picturefill.min.js"></script>
 
   </body>
