--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
     </svg>
 
     <header class="page-header container">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <div class="main-nav__header">
           <a class="page-header__logo header-logo">
             <picture>
@@ -27,7 +27,7 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <!--<div class="main-nav__wrapper">-->
-          <ul class="main-nav__list site-list main-nav--closed main-nav--nojs">
+          <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a href="catalog.html">Каталог товаров</a>
             </li>
@@ -35,13 +35,13 @@
               <a href="form.html">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__list user-list main-nav--closed main-nav--nojs">
+          <ul class="main-nav__list user-list">
             <li class="user-list__item">
               <a class="user-list__link user-list__search" href="search.html"><span>Поиск по сайту</span>
                 <svg width="17.6px" height="17.6px"><use xlink:href="#svg-icon-search"></use></svg>
               </a>
             </li>
-            <li class="user-list__item user-list__item-noactive">
+            <li class="user-list__item user-list__item--noactive">
               <a class="user-list__link user-list__login" href="login.html"><span class="visually-hidden">Войти</span></a>
             </li>
             <li class="user-list__item">
@@ -91,7 +91,7 @@
         <div class="popular__wrapper">
           <div class="popular__wrapper-title">
             <h2 class="popular__title">Вязаные корзинки</h2>
-            <p class="popular__new">ТОВАР НЕДЕЛИ</p>
+            <p class="popular__new">товар недели</p>
           </div>
           <div class="popular__wrapper-content">
             <div class="popular__wrapper-block-table">
