--- a/source/index.html
+++ b/source/index.html
@@ -199,7 +199,7 @@
           <img class="contact__map" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Карта">
         </picture>-->
         <div class="contact__map">
-          <iframe class="contact__map-iframe" src="https://yandex.ru/map-widget/v1/-/CCbg6KPq" width="320" height="457" frameborder="1" allowfullscreen="true"></iframe>
+          <iframe class="contact__map-iframe" src="https://yandex.ru/map-widget/v1/-/CCbg6KPq" width="320" height="457"></iframe>
         </div>
         <a class="contact__write button" href="write_us.html">Напишите нам</a>
       </section>
