--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
     </svg>
 
     <header class="page-header container">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <div class="main-nav__header">
           <a class="page-header__logo header-logo" href="index.html">
             <picture>
@@ -27,7 +27,7 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <!--<div class="main-nav__wrapper">-->
-          <ul class="main-nav__list site-list main-nav--closed main-nav--nojs">
+          <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a href="catalog.html">Каталог товаров</a>
             </li>
@@ -35,13 +35,13 @@
               <a>Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__list user-list main-nav--closed main-nav--nojs">
+          <ul class="main-nav__list user-list">
             <li class="user-list__item">
               <a class="user-list__link user-list__search" href="search.html"><span>Поиск по сайту</span>
                 <svg width="17.6px" height="17.6px"><use xlink:href="#svg-icon-search"></use></svg>
               </a>
             </li>
-            <li class="user-list__item user-list__item-noactive">
+            <li class="user-list__item user-list__item--noactive">
               <a class="user-list__link user-list__login" href="login.html"><span class="visually-hidden">Войти</span></a>
             </li>
             <li class="user-list__item">
@@ -144,26 +144,22 @@
           <div class="form-order__wrapper-phone form-order__fieldset--color">
             <div class="container">
               <div class="form-order__fieldset phone">
-                <h2 class="form-order__legend phone__title">Тел</h2>
+                <label class="form-order__legend phone__title" for="phone">Тел</label>
                 <input class="phone__input" type="phone" id="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
-                <label class="phone__label" for="phone">
-                  <svg width="24.829px" height="24.333px"><use xlink:href="#svg-icon-phone"></use></svg>
-                </label>
+                <svg class="phone__icon" width="24.829px" height="24.333px"><use xlink:href="#svg-icon-phone"></use></svg>
               </div>
 
               <div class="form-order__fieldset email">
-                <h2 class="form-order__legend email__title">E-mail</h2>
+                <label class="form-order__legend email__title" for="email">E-mail</label>
                 <input class="email__input" type="email" id="email" placeholder="Ваш Email*">
-                <label class="email__label" for="email">
-                  <svg width="32px" height="32px"><use xlink:href="#svg-icon-mail"></use></svg>
-                </label>
+                <svg class="email__icon" width="32px" height="32px"><use xlink:href="#svg-icon-mail"></use></svg>
               </div>
             </div>
           </div>
 
           <div class="form-order__fieldset textarea container">
-              <h2 class="form-order__legend textarea__title">Доп</h2>
-              <textarea class="textarea__field" cols="1" rows="1" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <label class="form-order__legend textarea__title" for="wishes">Доп</label>
+              <textarea class="textarea__field" id="wishes" cols="1" rows="1" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </div>
 
           <div class="form-order-wrapper-btn container">
