--- a/source/form.html
+++ b/source/form.html
@@ -145,7 +145,7 @@
             <div class="container">
               <div class="form-order__fieldset phone">
                 <label class="form-order__legend phone__title" for="phone">Тел</label>
-                <input class="phone__input" type="phone" id="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+                <input class="phone__input" type="tel" id="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
                 <svg class="phone__icon" width="24.829px" height="24.333px"><use xlink:href="#svg-icon-phone"></use></svg>
               </div>
 
