--- a/source/form.html
+++ b/source/form.html
@@ -70,7 +70,7 @@
       <!--<section class="order">
         <h2 class="visually-hidden">Заказ</h2>-->
 
-        <form class="form-order" method="get" action="https://echo.htmlacademy.ru">
+        <form class="form-order" method="post" action="https://echo.htmlacademy.ru">
           <div class="container">
           <p class="form-order__desc">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
 
