--- a/source/catalog.html
+++ b/source/catalog.html
@@ -162,7 +162,7 @@
               <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
               <img class="video__img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства">
             </picture>
-            <a class="video__play"><span class="visually-hidden">показать</span></a>
+            <button class="video__play" tabindex="0"><span class="visually-hidden">показать</span></button>
           </div>
           <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
           <a class="video__order button" href="#">Сделать заказ</a>
