--- a/source/index.html
+++ b/source/index.html
@@ -159,16 +159,20 @@
       <section class="reviews container">
         <div class="reviews__wrapper slider">
           <h2 class="reviews__title">Отзывы</h2>
-          <div class="reviews__list slider__list">
-            <blockquote class="reviews__item slider__item">
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item reviews__item--active slider__item">
               <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, <br>и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
               <cite class="reviews__author-name">Анастасия Красильникова</cite>
               <a class="reviews__author-link">@misssssiskras</a>
-            </blockquote>
-            <div class="reviews__nav">
-              <button class="reviews__btn reviews__prev" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
-              <button class="reviews__btn reviews__next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
-            </div>
+            </li>
+            <li class="reviews__item slider__item">
+            </li>
+            <li class="reviews__item slider__item">
+            </li>
+          </ul>
+          <div class="reviews__nav">
+            <button class="reviews__btn reviews__prev" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+            <button class="reviews__btn reviews__next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
           </div>
           <p class="reviews__toggles slider__toggles">
             <button class="slider__toggle" type="button">1</button>
